MGRENTITLE-197 - update test